--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -35,6 +35,7 @@
 }
 
 .popup-container {
+    z-index: 3;
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s ease-in-out;
